fixed missing welcome message, welcome was covered by navbar because navbars position was change to fixed.

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -7,3 +7,7 @@
 	background-color: #252522;
 	z-index: 1;
 } */
+
+.App h2 {
+	margin-top: 120px;
+}
